[tool.poetry]
name = "punigen"
version = "0.1.0"
description = "Python wrapper on crypto minisat implementing approximate model counting and uniform sampling."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"
pycryptosat = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
